feat: update t-api v1.4.x