@@ -4,53 +4,28 @@ import jakarta.annotation.Nonnull;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 import pab.ta.handler.base.lib.asset.AssetInfo;
-import pab.ta.handler.base.lib.asset.AssetType;
 import pab.ta.handler.base.lib.provider.AssetInfoSearchProvider;
-import pab.ta.handler.tbank.exception.BrokerApiException;
-import ru.tinkoff.piapi.contract.v1.InstrumentType;
-import ru.tinkoff.piapi.core.InvestApi;
 
 import java.util.List;
-import java.util.concurrent.ExecutionException;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
 public class SearchTProvider implements AssetInfoSearchProvider {
 
-    private final InvestApi investApi;
+    private final AssetInfoTProvider infoTProvider;
 
     @Override
     public List<AssetInfo> search(@Nonnull String query) {
-        var future = investApi.getInstrumentsService().findInstrument(query);
 
-        try {
-            return future.get()
-                    .stream()
-                    .filter(instrumentShort -> switch (instrumentShort.getInstrumentKind()) {
-                        case InstrumentType.INSTRUMENT_TYPE_FUTURES,
-                                InstrumentType.INSTRUMENT_TYPE_CURRENCY,
-                                InstrumentType.INSTRUMENT_TYPE_SHARE -> true;
-                        default -> false;
-                    })
-                    .map(instrumentShort -> {
-                        AssetType type = switch (instrumentShort.getInstrumentKind()) {
-                            case InstrumentType.INSTRUMENT_TYPE_FUTURES -> AssetType.FUTURE;
-                            case InstrumentType.INSTRUMENT_TYPE_CURRENCY -> AssetType.CURRENCY;
-                            case InstrumentType.INSTRUMENT_TYPE_SHARE -> AssetType.SHARE;
-                            default -> throw new IllegalArgumentException("No handler for type " +
-                                    instrumentShort.getInstrumentKind());
-                        };
+        return infoTProvider.info().stream().filter(info -> {
 
-                        return new AssetInfo(
-                                instrumentShort.getUid(),
-                                instrumentShort.getTicker(),
-                                type,
-                                instrumentShort.getName());
-                    })
-                    .collect(Collectors.toList());
-        } catch (InterruptedException | ExecutionException ex) {
-            throw new BrokerApiException(ex.getMessage());
-        }
+            var description = info.getDescription().strip().toLowerCase();
+            var ticker = info.getTicker().strip().toLowerCase();
+
+            var hasDescription = description.contains(query.toLowerCase());
+            var hasTicker = ticker.contains(query.toLowerCase());
+
+            return hasDescription || hasTicker;
+        }).toList();
     }
 }
